--- a/app/templates/app/comprafinalizada.html
+++ b/app/templates/app/comprafinalizada.html
@@ -23,7 +23,7 @@
       </div>
       <div class="card-footer text-center">
 
-        <a href="../lista_libros" class="btn btn-info">Volver al inicio</a>
+        <a href="../home" class="btn btn-info">Volver al inicio</a>
       </div>
     </div>
   </div>
