--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -21,7 +21,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES REGISTRARTE!"
-              href="../crear_cliente">Registrarse</a>
+              href="../crearclienteform">Registrarse</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES INICIAR SESIÓN!"
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <a href="../registro" class="btn btn-success my-2" data-bs-toggle="tooltip"
+                  <a href="../crearclienteform" class="btn btn-success my-2" data-bs-toggle="tooltip"
                     title="¡AQUÍ PUEDES REGISTRARTE!">Registrarse gratis</a>
                 </div>
               </div>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <a href="../registro" class="btn btn-success my-2" data-bs-toggle="tooltip"
+                  <a href="../crearclienteform" class="btn btn-success my-2" data-bs-toggle="tooltip"
                     title="¡AQUÍ PUEDES REGISTRARTE!">Registrarse gratis</a>
                 </div>
               </div>
@@ -138,7 +138,7 @@
                   <h4>¡Si quieres comprar registrate!</h4>
                 </div>
                 <div class="d-flex justify-content-center">
-                  <a href="../registro" class="btn btn-success my-2" data-bs-toggle="tooltip"
+                  <a href="../crearclienteform" class="btn btn-success my-2" data-bs-toggle="tooltip"
                     title="¡AQUÍ PUEDES REGISTRARTE!">Registrarse gratis</a>
                 </div>
               </div>
