--- a/app/templates/app/ver_carrito.html
+++ b/app/templates/app/ver_carrito.html
@@ -64,8 +64,8 @@
 
 <ul class="nav d-flex justify-content-center">
   <li class="nav-item d-flex justify-content-center">
-    <a class="nav-link" href="../listar_cliente" data-bs-toggle="tooltip"
-      title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al perfil</a>
+    <a class="nav-link" href="../home" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al
+      perfil</a>
   </li>
 </ul>
 
