--- a/app/templates/app/basetablatec.html
+++ b/app/templates/app/basetablatec.html
@@ -1,7 +1,3 @@
-{% extends 'app/base.html' %} {% block contenido %}
-{% block navbar %}
-{% include 'app/basetecnico.html' %}
-{% endblock %}
 <section class="thumbnail 1" id="thumbnail 1">
   <div class="Thumbnail py-2 bg-light">
     <!--CONTENEDOR PLOMO QUE ENCIERRA LOS CONTAINER-->
@@ -26,31 +22,31 @@
               </tr>
             </thead>
             <tbody>
-              {% for aux in listaTecnico %}
+              {% if user.tecnico %}
 
               <tr>
                 <td>
-                  {% if aux.imagen %}
-                  <img src=" aux.imagen.url " />
+                  {% if user.imagen %}
+                  <img src=" user.imagen.url " />
                   {% else %}
                   <img src="../static/app/img/equipo.png" style="width: 40%; max-width: 80%;" />
                   {% endif %}
                 </td>
 
-                <td>{{aux.rut_tecnico}}</td>
-                <td>{{aux.nombre}}</td>
-                <td>{{aux.apellido}}</td>
-                <td>{{aux.direccion}}</td>
-                <td>{{aux.telefono}}</td>
+                <td> {{ user.tecnico.rut }}</td>
+                <td> {{ user.tecnico.nombre }}</td>
+                <td> {{ user.tecnico.apellido }}</td>
+                <td> {{ user.tecnico.direccion }}</td>
+                <td> {{ user.tecnico.telefono }}</td>
                 <td>
-                  {{aux.correo}}
+                  {{user.tecnico.correo}}
                   <div class="d-flex" id="modifi">
-                    <a href="{% url 'modifitecnico' aux.id %}" class="btn btn-info btn-sm" data-bs-toggle="tooltip"
+                    <a href="{% url 'modifitecnico' user.id %}" class="btn btn-info btn-sm" data-bs-toggle="tooltip"
                       title="¡AQUÍ PUEDES MODIFICAR LOS DATOS!">Modificar datos</a>
                   </div>
                 </td>
               </tr>
-              {% endfor %}
+              {% endif %}
             </tbody>
           </table>
         </div>
@@ -59,17 +55,9 @@
           <table class="table">
             <tbody>
               <tr>
+
                 <td>
-                  {% if cantidad_tecnicos > 0 %}
-                  <a href="#" class="btn btn-success bg-success disabled" data-bs-toggle="tooltip"
-                    title="Ya has agregado tus datos">Ya has agregado tus datos</a>
-                  {% else %}
-                  <a href="{% url 'tecnicoform' %}" class="btn btn-success bg-success" data-bs-toggle="tooltip"
-                    title="Agrega tus datos">Agrega tus datos</a>
-                  {% endif %}
-                </td>
-                <td>
-                  <a href="{% url 'logout' %}" class="btn btn-danger bg-danger" data-bs-toggle="tooltip"
+                  <a href="../cerrar_sesion" class="btn btn-danger bg-danger" data-bs-toggle="tooltip"
                     title="¡AQUÍ PUEDES CERRAR SESIÓN!">Cerrar sesión</a>
                 </td>
               </tr>
@@ -80,5 +68,6 @@
     </div>
   </div>
 </section>
+{% block tablatec %}
 
 {% endblock %}
