--- a/app/templates/app/crearclienteform.html
+++ b/app/templates/app/crearclienteform.html
@@ -33,24 +33,8 @@
         {% load crispy_forms_tags %}
         <div class="formulario">
           <form method="POST">
-            {% csrf_token %} {{ form|crispy }}
-            <label for="username">Nombre de usuario:</label>
-            <input type="text" name="username" required><br><br>
-            <label for="password">Contraseña:</label>
-            <input type="password" name="password" required><br><br>
-            <label for="rut">RUT:</label>
-            <input type="text" name="rut" required><br><br>
-            <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" required><br><br>
-            <label for="apellido">Apellido:</label>
-            <input type="text" name="apellido" required><br><br>
-            <label for="correo">Correo:</label>
-            <input type="email" name="correo" required><br><br>
-            <label for="direccion">Direccion:</label>
-            <input type="text" name="direccion" required><br><br>
-            <label for="telefono">Telefono:</label>
-            <input type="text" name="telefono" required><br><br>
-            <button type="submit">Crear Cliente</button>
+            {% csrf_token %} {{ form | crispy }}
+            <button type="submit" class="btn btn-success">Registrate</button>
             {% if messages %}
             <!-- <script>alert(1) </script> -->
             {% for msj in messages %}
