--- a/app/templates/app/listar_servicio.html
+++ b/app/templates/app/listar_servicio.html
@@ -52,8 +52,8 @@
 </section>
 <ul class="nav d-flex justify-content-center">
   <li class="nav-item d-flex justify-content-center">
-    <a class="nav-link" href="../listar_cliente" data-bs-toggle="tooltip"
-      title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al perfil</a>
+    <a class="nav-link" href="../home" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al
+      perfil</a>
   </li>
 </ul>
 {% endblock %}
