--- a/app/templates/app/modifiempleado.html
+++ b/app/templates/app/modifiempleado.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %} {% block contenido %}
 {% block navbar %}
-  {% include 'app/basempleado.html' %}
+{% include 'app/basempleado.html' %}
 {% endblock %}
 <!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
 <div class="main container-fluid">
@@ -37,7 +37,7 @@
 
   <ul class="nav d-flex justify-content-center">
     <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../listar_empleado">Volver al perfil</a>
+      <a class="nav-link" href="../home">Volver al perfil</a>
     </li>
   </ul>
 </div>
