--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -25,7 +25,7 @@
         {% load crispy_forms_tags %}
         <div class="formulario">
           <form action="" method="POST" class="col sm-3">
-            {% csrf_token %} {{ form.as_p}}
+            {% csrf_token %} {{ form | crispy}}
             <button type="submit" class="btn btn-success" title="¡INICIA SESIÓN!">
               Iniciar sesión
             </button>
