--- a/app/static/app/scss/style.scss
+++ b/app/static/app/scss/style.scss
@@ -114,7 +114,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: $primary;
+    color: $secondary;
 }
 
 @media (max-width: 991.98px) {
