--- a/app/templates/app/basecliente.html
+++ b/app/templates/app/basecliente.html
@@ -1,40 +1,24 @@
-<header class="header" id="header">
-  <nav class="navbar navbar-expand-sm bg-info navbar-light">
-    <div class="container-fluid">
-      <img src="../static/app/img/libro.png " alt="" style="width: 50px; border-radius: 50%" />
-      <!--border-raduis le da forma circular al icono -->
+<!-- Navbar Start -->
+<div class="container-fluid p-0">
+  <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
 
-      <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="../servicioform">Solicitiar Servicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../listar_servicio">Ver solicitudes de servicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../cotizacionesform">Solicitar cotización</a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="../lista_libros">¡Ir a la tienda!</a>
-          </li>
+    <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+      <div class="navbar-nav m-auto py-0">
+        <a href="../servicioform" class="nav-item nav-link active">Solicitiar Servicio</a>
+        <a href="../listar_servicio" class="nav-item nav-link">Ver solicitudes de servicio</a>
+        <a href="../cotizacionesform" class="nav-item nav-link">Solicitar cotización</a>
+        <a href="../lista_libros" class="nav-item nav-link">¡Ir a la tienda!</a>
+        <a href="../ver_carrito" class="nav-item nav-link">Ver mi carrito</a>
+        <a href="../starken_api" class="nav-item nav-link">Seguimiento de productos</a>
 
-          <li class="nav-item">
-            <a class="nav-link" href="../ver_carrito">Ver mi carrito </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../starken_api">Seguimiento de productos </a>
-          </li>
-        </ul>
       </div>
+
     </div>
   </nav>
-</header>
+</div>
+<!-- Navbar End -->
+
 {% block navbar %}
 
 {% endblock %}
