--- a/app/static/app/css/regislibro1.css
+++ b/app/static/app/css/regislibro1.css
@@ -1,10 +1,21 @@
-#main5 {
-  background-image: url("../img/regis1234.jpg");
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+#toperegistro {
+  background: url("../img/registro2.jpg") center center / cover no-repeat;
 }
 
-#toperegistro {
-  margin-top: 140px;
+.formulario {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  margin: 0 auto;
+  max-width: 400px;
+  border-radius: 10px;
+}
+
+@media (max-width: 576px) {
+  #toperegistro {
+    background-position: top center;
+  }
+
+  .formulario {
+    margin-top: 20px;
+  }
 }
