--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -75,13 +75,13 @@
       <div class="row">
         <div class="col-lg-6 pr-lg-5 mb-5">
           <a href="index.html" class="navbar-brand">
-            <h1 class="mb-3 text-white"><span class="text-white">SPA</span> Center</h1>
+            <h1 class="mb-3 text-white"><span class="text-white">Librería</span> imagina</h1>
           </a>
-          <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam sed clita
-            dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-          <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
+          <p>Descubre el poder de Imagina, la librería revolucionaria que desbloquea tu imaginación, permitiéndote tener
+            una experiencia profunda en nuestros libros que jamás antes lo habías experimentado.</p>
+          <p><i class="fa fa-map-marker-alt mr-2"></i>Viacura 2829, Santiago de chile</p>
           <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-          <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+          <p><i class="fa fa-envelope mr-2"></i>LibImagina@gmail.com</p>
           <div class="d-flex justify-content-start mt-4">
             <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
             <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -92,23 +92,21 @@
         <div class="col-lg-6 pl-lg-5">
           <div class="row">
             <div class="col-sm-6 mb-5">
-              <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
+              <h5 class="text-white text-uppercase mb-4">Links rapidos</h5>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
-                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Registrarse</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Iniciar sesion</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>nostros</a>
+                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
               </div>
             </div>
             <div class="col-sm-6 mb-5">
-              <h5 class="text-white text-uppercase mb-4">Our Services</h5>
+              <h5 class="text-white text-uppercase mb-4">Nuestos servicios</h5>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body Massage</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Stone Therapy</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Facial Therapy</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Skin Care</a>
-                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Nail Care</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicio de Starken</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Compra por mayor</a>
+
               </div>
             </div>
 
@@ -122,10 +120,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-          <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
+          <p class="m-0 text-white">&copy; <a href="#">LibreríaImagina@hotmail.com</a>.Todos los derechos reservados.
+          </p>
         </div>
         <div class="col-md-6 text-center text-md-right">
-          <p class="m-0 text-white">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+          <p class="m-0 text-white">Diseñado por <a href="https://htmlcodex.com">Orlando Echeverría Hernández</a></p>
         </div>
       </div>
     </div>
