--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,15 +4,15 @@
 <div class="container-fluid p-0">
   <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
     <a href="index.html" class="navbar-brand ">
-      <h1 class="m-0 text-dark"><span class="text-dark">Libreria</span> Imagina</h1>
+      <h1 class="m-0 text-dark"><span class="text-dark">Librería</span> imagina</h1>
     </a>
 
     <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
       <div class="navbar-nav m-auto py-0">
-        <a href="index.html" class="nav-item nav-link  ">Home</a>
-        <a href="about.html" class="nav-item nav-link">About</a>
-        <a href="service.html" class="nav-item nav-link">Services</a>
-        <a href="contact.html" class="nav-item nav-link">Contact</a>
+        <a href="{% url 'login' %}" class="nav-item nav-link">Iniciar sesión</a>
+        <a href="../crearclienteform" class="nav-item nav-link">Registrarse</a>
+        <a href="../index" class="nav-item nav-link">Nosotros</a>
+        <a href="../index" class="nav-item nav-link">Contacto</a>
 
       </div>
 
@@ -36,12 +36,13 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <div class="p-3" style="max-width: 900px;">
             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown"
-              style="letter-spacing: 3px;">Spa & Beauty Center</h6>
-            <h3 class="display-3 text-capitalize text-white mb-3">Massage Treatment</h3>
-            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet
-              amet amet ndiam elitr ipsum labore diamaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make
-              Appointment</a>
+              style="letter-spacing: 3px;"></h6>
+            <h3 class="display-3 text-capitalize text-white mb-3">Librería imagina</h3>
+            <p class="mx-md-5 px-5">Imagina, la innovadora librería que desata tu creatividad, convirtiendo tus
+              pensamientos en imágenes llenas de magia y color.
+            </p>
+            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
+              href="../crearclienteform">Registrate</a>
           </div>
         </div>
       </div>
@@ -50,12 +51,13 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <div class="p-3" style="max-width: 900px;">
             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown"
-              style="letter-spacing: 3px;">Spa & Beauty Center</h6>
-            <h3 class="display-3 text-capitalize text-white mb-3">Facial Treatment</h3>
-            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet
-              amet amet ndiam elitr ipsum labore diam</p>
-            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make
-              Appointment</a>
+              style="letter-spacing: 3px;"></h6>
+            <h3 class="display-3 text-capitalize text-white mb-3">Librería imagina</h3>
+            <p class="mx-md-5 px-5">Imagina, la innovadora librería que desata tu creatividad, convirtiendo tus
+              pensamientos en imágenes llenas de magia y color.</p>
+            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
+              href="../crearclienteform">
+              Registrate</a>
           </div>
         </div>
       </div>
@@ -64,12 +66,12 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <div class="p-3" style="max-width: 900px;">
             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown"
-              style="letter-spacing: 3px;">Spa & Beauty Center</h6>
-            <h3 class="display-3 text-capitalize text-white mb-3">Cellulite Treatment</h3>
-            <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet
-              amet amet ndiam elitr ipsum labore diam</p>
-            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make
-              Appointment</a>
+              style="letter-spacing: 3px;">r</h6>
+            <h3 class="display-3 text-capitalize text-white mb-3">Librería imagina</h3>
+            <p class="mx-md-5 px-5">Imagina, la innovadora librería que desata tu creatividad, convirtiendo tus
+              pensamientos en imágenes llenas de magia y color.</p>
+            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
+              href="../crearclienteform">Registrate</a>
           </div>
         </div>
       </div>
@@ -83,74 +85,62 @@
 <div class="container-fluid px-0 py-5 my-5">
   <div class="row mx-0 justify-content-center text-center">
     <div class="col-lg-6">
-      <h6 class="d-inline-block bg-ligth text-dark-uppercase py-1 px-2">Our Service</h6>
-      <h1>Spa & Beauty Services</h1>
+      <h6 class="d-inline-block bg-ligth text-dark-uppercase py-1 px-2">Librería imagina</h6>
+      <h1>La mejor librería de la actualidad</h1>
     </div>
   </div>
   <div class="owl-carousel service-carousel">
     <div class="service-item position-relative">
       <img class="img-fluid" src="../static/app/img/service-1.jpg" alt="">
       <div class="service-text text-center">
-        <h4 class="text-white font-weight-medium px-3">Body Massage</h4>
-        <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum
-        </p>
+
         <div class="w-100 bg-white text-center p-4">
-          <a class="btn btn-primary" href="">Make Order</a>
+          <a class="btn btn-primary" href="../crearclienteform">Comprar ahora</a>
         </div>
       </div>
     </div>
     <div class="service-item position-relative">
       <img class="img-fluid" src="../static/app/img/service-2.jpg" alt="">
       <div class="service-text text-center">
-        <h4 class="text-white font-weight-medium px-3">Stone Therapy</h4>
-        <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum
-        </p>
+
         <div class="w-100 bg-white text-center p-4">
-          <a class="btn btn-primary" href="">Make Order</a>
+          <a class="btn btn-primary" href="../crearclienteform">Comprar ahora</a>
         </div>
       </div>
     </div>
     <div class="service-item position-relative">
       <img class="img-fluid" src="../static/app/img/service-3.jpg" alt="">
       <div class="service-text text-center">
-        <h4 class="text-white font-weight-medium px-3">Facial Therapy</h4>
-        <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum
-        </p>
+
         <div class="w-100 bg-white text-center p-4">
-          <a class="btn btn-primary" href="">Make Order</a>
+          <a class="btn btn-primary" href="../crearclienteform">Comprar ahora</a>
         </div>
       </div>
     </div>
     <div class="service-item position-relative">
       <img class="img-fluid" src="../static/app/img/service-4.jpg" alt="">
       <div class="service-text text-center">
-        <h4 class="text-white font-weight-medium px-3">Skin Care</h4>
-        <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum
-        </p>
+
         <div class="w-100 bg-white text-center p-4">
-          <a class="btn btn-primary" href="">Make Order</a>
+          <a class="btn btn-primary" href="../crearclienteform">Comprar ahora</a>
         </div>
       </div>
     </div>
     <div class="service-item position-relative">
       <img class="img-fluid" src="../static/app/img/service-5.jpg" alt="">
       <div class="service-text text-center">
-        <h4 class="text-white font-weight-medium px-3">Stream Bath</h4>
-        <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum
-        </p>
+
         <div class="w-100 bg-white text-center p-4">
-          <a class="btn btn-primary" href="">Make Order</a>
+          <a class="btn btn-primary" href="../crearclienteform">Comprar ahora</a>
         </div>
       </div>
     </div>
     <div class="service-item position-relative">
       <img class="img-fluid" src="../static/app/img/service-6.jpg" alt="">
       <div class="service-text text-center">
-        <h4 class="text-white font-weight-medium px-3">Face Masking</h4>
-        <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum
-        </p>
+
         <div class="w-100 bg-white text-center p-4">
-          <a class="btn btn-primary" href="">Make Order</a>
+          <a class="btn btn-primary" href="../crearclienteform">Comprar ahora</a>
         </div>
       </div>
     </div>
