--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -26,7 +26,7 @@
         <div class="formulario">
           <form action="" method="POST" class="col sm-3">
             {% csrf_token %} {{ form | crispy}}
-            <button type="submit" class="btn btn-success" title="¡INICIA SESIÓN!">
+            <button type="submit" class="btn btn-dark" title="¡INICIA SESIÓN!">
               Iniciar sesión
             </button>
           </form>
@@ -38,7 +38,7 @@
   <!--CANCELAR-->
   <ul class="nav d-flex justify-content-center">
     <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../../index">Volver</a>
+      <a class="nav-link text-dark" href="../../index">Volver</a>
     </li>
   </ul>
 
