--- a/app/templates/app/comprafinalizada.html
+++ b/app/templates/app/comprafinalizada.html
@@ -11,7 +11,7 @@
         <h2 class="lead mt-2 mb-3" style="font-size: 30px;"><b>¡Compra exitosa!</b></h2>
         <img src="../static/app/img/chek.jpg" alt="" width="100">
         <p>Su compra se ha completado correctamente.</p>
-        <button class="btn btn-primary" onclick="redireccionar()">Ver el estado de su compra</button>
+        <button class="btn btn-dark" onclick="redireccionar()">Ver el estado de su compra</button>
 
         <script>
           function redireccionar() {
@@ -23,7 +23,7 @@
       </div>
       <div class="card-footer text-center">
 
-        <a href="../home" class="btn btn-info">Volver al inicio</a>
+        <a href="../home" class="btn btn-dark">Volver al inicio</a>
       </div>
     </div>
   </div>
