--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 
 {% if user.cliente %}
 {% block navbar %}
