--- a/app/templates/app/indexpypal.html
+++ b/app/templates/app/indexpypal.html
@@ -39,7 +39,8 @@
 </div>
 <ul class="nav d-flex justify-content-center">
   <li class="nav-item d-flex justify-content-center">
-    <a class="nav-link" href="../ver_carrito" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES VOLVER A TU CARRITO!">Volver
+    <a class="nav-link text-dark" href="../ver_carrito" data-bs-toggle="tooltip"
+      title="¡AQUÍ PUEDES VOLVER A TU CARRITO!">Volver
       al carrito</a>
   </li>
 </ul>
