--- a/app/templates/app/listar_personas.html
+++ b/app/templates/app/listar_personas.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 {% block navbar %}
 {% include 'app/basempleado.html' %}
 {% endblock %}
@@ -68,7 +68,7 @@
 </section>
 <ul class="nav d-flex justify-content-center">
   <li class="nav-item d-flex justify-content-center">
-    <a class="nav-link" href="../home">Volver al perfil</a>
+    <a class="nav-link text-dark" href="../home">Volver al perfil</a>
   </li>
 </ul>
 {% endblock %}
