--- a/app/templates/app/materialesform.html
+++ b/app/templates/app/materialesform.html
@@ -1,6 +1,6 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 {% block navbar %}
-  {% include 'app/basetecnico.html' %}
+{% include 'app/basetecnico.html' %}
 {% endblock %}
 
 <div class="main container-fluid">
@@ -30,16 +30,17 @@
             });
           </script>
           {% endfor %} {% endif %}
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item d-flex justify-content-center">
+              <a class="nav-link text-dark" href="../home">Volver al perfil</a>
+            </li>
+          </ul>
         </form>
       </div>
     </div>
   </div>
 
-  <ul class="nav d-flex justify-content-center">
-    <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../listar_tecnico">Volver al perfil</a>
-    </li>
-  </ul>
+
 </div>
 
 {% endblock %}
