--- a/app/templates/app/modificliempleado.html
+++ b/app/templates/app/modificliempleado.html
@@ -1,6 +1,6 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 {% block navbar %}
-  {% include 'app/basempleado.html' %}
+{% include 'app/basempleado.html' %}
 {% endblock %}
 <!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
 <div class="main container-fluid">
@@ -30,15 +30,16 @@
             });
           </script>
           {% endfor %} {% endif %}
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item d-flex justify-content-center">
+              <a class="nav-link text-dark" href="../home">Volver al perfil</a>
+            </li>
+          </ul>
         </form>
       </div>
     </div>
   </div>
 
-  <ul class="nav d-flex justify-content-center">
-    <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../listar_empleado">Volver al perfil</a>
-    </li>
-  </ul>
+
 </div>
 {% endblock %}
