--- a/app/templates/app/basetablaemp.html
+++ b/app/templates/app/basetablaemp.html
@@ -45,7 +45,7 @@
                 <td>
                   {{user.empleado.correo}}
                   <div class="d-flex" id="modifi">
-                    <a href="{% url 'modifiempleado' user.id %}" class="btn btn-info btn-sm" data-bs-toggle="tooltip"
+                    <a href="{% url 'modifiempleado' user.id %}" class="btn btn-dark btn-sm" data-bs-toggle="tooltip"
                       title="¡AQUÍ PUEDES MODIFICAR LOS DATOS!">Modificar datos</a>
                   </div>
                 </td>
