--- a/app/templates/app/basetablatec.html
+++ b/app/templates/app/basetablatec.html
@@ -41,7 +41,7 @@
                 <td>
                   {{user.tecnico.correo}}
                   <div class="d-flex" id="modifi">
-                    <a href="{% url 'modifitecnico' user.id %}" class="btn btn-info btn-sm" data-bs-toggle="tooltip"
+                    <a href="{% url 'modifitecnico' user.id %}" class="btn btn-dark btn-sm" data-bs-toggle="tooltip"
                       title="¡AQUÍ PUEDES MODIFICAR LOS DATOS!">Modificar datos</a>
                   </div>
                 </td>
