--- a/app/templates/app/basetecnico.html
+++ b/app/templates/app/basetecnico.html
@@ -1,31 +1,24 @@
-<header class="header" id="header">
-  <nav class="navbar navbar-expand-sm bg-info navbar-light">
-    <div class="container-fluid">
-      <img src="../static/app/img/libro.png " alt="" style="width: 50px; border-radius: 50%" />
-      <!--border-raduis le da forma circular al icono -->
+<!-- Navbar Start -->
+<div class="container-fluid p-0">
+  <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
 
-      <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="../listar_serviciotec">Ver solicitudes de servicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../listar_materiales">Ver materiales disponibles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-              href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync">Enviar
-              correos</a>
-          </li>
-        </ul>
+
+    <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+      <div class="navbar-nav m-auto py-0">
+        <a href="../listar_serviciotec" class="nav-item nav-link active">Ver solicitudes de servicio</a>
+        <a href="../listar_materiales" class="nav-item nav-link">Ver materiales disponibles</a>
+        <a href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync"
+          class="nav-item nav-link">Enviar
+          correos</a>
+
+
+
       </div>
+
     </div>
   </nav>
-</header>
+</div>
+<!-- Navbar End -->
 {% block navbar3 %}
 
 {% endblock %}
