--- a/app/templates/app/cotizacionesform.html
+++ b/app/templates/app/cotizacionesform.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 {% block navbar %}
 {% include 'app/basecliente.html' %}
 {% endblock %}
@@ -14,7 +14,7 @@
           <table>
             {{ form|crispy }}
           </table>
-          <input type="submit" value="Guardar" class="btn btn-success" />
+          <input type="submit" value="Guardar" class="btn btn-dark" />
           {% if messages %}
           <!-- <script>alert(1) </script> -->
           {% for msj in messages %}
@@ -37,7 +37,7 @@
 
   <ul class="nav d-flex justify-content-center">
     <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../home">Volver al perfil</a>
+      <a class="nav-link text-dark" href="../home">Volver al perfil</a>
     </li>
   </ul>
 </div>
