--- a/app/templates/app/creartecnicoform.html
+++ b/app/templates/app/creartecnicoform.html
@@ -34,7 +34,7 @@
         <div class="formulario">
           <form method="POST">
             {% csrf_token %} {{ form | crispy }}
-            <button type="submit" class="btn btn-success">Crear tecnico</button>
+            <button type="submit" class="btn btn-dark">Crear tecnico</button>
             {% if messages %}
             <!-- <script>alert(1) </script> -->
             {% for msj in messages %}
@@ -50,6 +50,11 @@
               });
             </script>
             {% endfor %} {% endif %}
+            <ul class="nav d-flex justify-content-center">
+              <li class="nav-item d-flex justify-content-center">
+                <a class="nav-link text-dark" href="../home">Volver</a>
+              </li>
+            </ul>
           </form>
 
         </div>
@@ -59,12 +64,8 @@
     </section>
   </div>
 
-  <!--CANCELAR-->
-  <ul class="nav d-flex justify-content-center">
-    <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../home">Volver</a>
-    </li>
-  </ul>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
