--- a/app/templates/app/lista_libros.html
+++ b/app/templates/app/lista_libros.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %}
+{% extends 'app/base2.html' %}
 {% block contenido %}
 {% block navbar %}
 {% include 'app/basecliente.html' %}
@@ -74,7 +74,8 @@
 
 <ul class="nav d-flex justify-content-center">
   <li class="nav-item d-flex justify-content-center">
-    <a class="nav-link" href="../home" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al
+    <a class="nav-link text-dark" href="../home" data-bs-toggle="tooltip"
+      title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al
       perfil</a>
   </li>
 </ul>
