--- a/app/templates/app/modificliente.html
+++ b/app/templates/app/modificliente.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 {% block navbar %}
 {% include 'app/basecliente.html' %}
 {% endblock %}
@@ -30,15 +30,16 @@
             });
           </script>
           {% endfor %} {% endif %}
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item d-flex justify-content-center">
+              <a class="nav-link text-dark" href="../home">Volver al perfil</a>
+            </li>
+          </ul>
         </form>
       </div>
     </div>
   </div>
 
-  <ul class="nav d-flex justify-content-center">
-    <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../home">Volver al perfil</a>
-    </li>
-  </ul>
+
 </div>
 {% endblock %}
