--- a/app/templates/app/servicioform.html
+++ b/app/templates/app/servicioform.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %} {% block contenido %}
+{% extends 'app/base2.html' %} {% block contenido %}
 {% block navbar %}
 {% include 'app/basecliente.html' %}
 {% endblock %}
@@ -18,7 +18,7 @@
           <table>
             {{ form|crispy }}
           </table>
-          <input type="submit" value="Guardar" class="btn btn-success" />
+          <input type="submit" value="Guardar" class="btn btn-dark" />
           {% if messages %}
           <!-- <script>alert(1) </script> -->
           {% for msj in messages %}
@@ -41,7 +41,8 @@
 
   <ul class="nav d-flex justify-content-center">
     <li class="nav-item d-flex justify-content-center">
-      <a class="nav-link" href="../home" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al
+      <a class="nav-link text-dark" href="../home" data-bs-toggle="tooltip"
+        title="¡AQUÍ PUEDES VOLVER A TU PERFIL!">Volver al
         perfil</a>
     </li>
   </ul>
