--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -66,7 +66,7 @@
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
           <div class="p-3" style="max-width: 900px;">
             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown"
-              style="letter-spacing: 3px;">r</h6>
+              style="letter-spacing: 3px;"></h6>
             <h3 class="display-3 text-capitalize text-white mb-3">Librería imagina</h3>
             <p class="mx-md-5 px-5">Imagina, la innovadora librería que desata tu creatividad, convirtiendo tus
               pensamientos en imágenes llenas de magia y color.</p>
