--- a/app/templates/app/lista_libros.html
+++ b/app/templates/app/lista_libros.html
@@ -43,7 +43,7 @@
                   carrito.cantidad|default_if_none:" 1" }}" min="1" />
               </div>
               <div class="d-flex justify-content-center m-3">
-                <button type="submit" class="btn btn-success btn-sm">
+                <button type="submit" class="btn btn-dark btn-sm">
                   Agregar al carrito
                 </button>
                 {% if messages %}
