--- a/app/templates/app/modifitecnicoadmin.html
+++ b/app/templates/app/modifitecnicoadmin.html
@@ -14,7 +14,7 @@
           <table>
             {{ form|crispy }}
           </table>
-          <input type="submit" value="Guardar" class="btn btn-success" />
+          <input type="submit" value="Guardar" class="btn btn-dark" />
           {% if messages %}
           <!-- <script>alert(1) </script> -->
           {% for msj in messages %}
