--- a/app/templates/app/base2.html
+++ b/app/templates/app/base2.html
@@ -78,7 +78,7 @@
           </p>
         </div>
         <div class="col-md-6 text-center text-md-right">
-          <p class="m-0 text-white">Diseñado por <a href="https://htmlcodex.com">Orlando Echeverría Hernández</a></p>
+          <p class="m-0 text-white">Diseñado por <a href="">Orlando Echeverría Hernández</a></p>
         </div>
       </div>
     </div>
