--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -120,11 +120,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-          <p class="m-0 text-white">&copy; <a href="#">LibreríaImagina@hotmail.com</a>.Todos los derechos reservados.
+          <p class="m-0 text-white">&copy; <a href="">LibreríaImagina@hotmail.com</a>.Todos los derechos reservados.
           </p>
         </div>
         <div class="col-md-6 text-center text-md-right">
-          <p class="m-0 text-white">Diseñado por <a href="https://htmlcodex.com">Orlando Echeverría Hernández</a></p>
+          <p class="m-0 text-white">Diseñado por <a href="">Orlando Echeverría Hernández</a></p>
         </div>
       </div>
     </div>
