--- a/app/templates/app/indexpypal.html
+++ b/app/templates/app/indexpypal.html
@@ -1,6 +1,6 @@
 {% extends 'app/basepypal.html' %} {% block contenido %}
 <div class="main container-fluid d-flex justify-content-center mb-4">
-  <h1>Paga con paypal seguro y rapido </h1>
+  <h1>Paga con PayPal rápido y seguro </h1>
 
 
 </div>
